# UAP

./: .gitignore  Facial_Emotion_Classification.ipynb  README.md  app.py  pyproject.toml
